--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/core": "^18.0.0-next.3",
     "@angular/forms": "^18.0.0-next.3",
     "@angular/localize": "^18.0.0-next.3",
+    "@angular/material": "18.0.0-next.6",
     "@angular/platform-browser": "^18.0.0-next.3",
     "@angular/platform-browser-dynamic": "^18.0.0-next.3",
     "@angular/router": "^18.0.0-next.3",
