--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "apexcharts": "^3.49.0",
     "bootstrap": "^5.3.3",
     "ng-apexcharts": "^1.10.0",
+    "ngx-color-picker": "^16.0.0",
     "ngx-scrollbar": "^13.0.3",
     "rxjs": "~7.8.1",
     "screenfull": "^6.0.2",
